# NSL

./: .gitignore  README.md  license.md  requirements.txt
Exercises_01/: Buffon.cpp  Buffon.h  CMakeLists.txt  Exercise_01.ipynb  Exercise_1.1.cpp  Exercise_1.2.cpp  Exercise_1.3.cpp
Exercises_02/: CMakeLists.txt  Exercise_2.1.cpp  Exercise_2.2.cpp  Exercises_02.ipynb  rw.cpp  rw.h
Exercises_03/: CmakeLists.txt  Exercise_3.1.cpp  Exercises_03.ipynb  gbm.cpp  gbm.h
Exercises_04/: Exercises_04.ipynb
Exercises_04/NSL_SIMULATOR/SOURCE/: Makefile  NSL_SIMULATOR.cpp  system.cpp  system.h
Exercises_05/: CmakeLists.txt  Exercise_05.ipynb  Exercise_5.1.cpp  lib.cpp
Exercises_06/: Exercise_06.ipynb
Exercises_06/NSL_SIMULATOR/OUTPUT/: readme.md
Exercises_06/NSL_SIMULATOR/SOURCE/: Makefile  NSL_SIMULATOR.cpp  equilibration.cpp  system.cpp  system.h
Exercises_07/: Exercise_07.ipynb
Exercises_07/NSL_SIMULATOR/SOURCE/: Makefile  NSL_SIMULATOR.cpp  nve_temp_search.cpp  (+2 more)
Exercises_08/: CmakeLists.txt  Exercise_08.ipynb  Exercise_8.1.cpp  Exercise_8.2.cpp  lib.cpp  lib.h
Exercises_09/: CmakeLists.txt  Exercise_09.ipynb  Exercise_9.1.cpp  lib.cpp  lib.h
Exercises_10/: CmakeLists.txt  Exercise_10.1.cpp  Exercise_10.2.cpp  Exercise_10.2_genetic.cpp  Exercise_10.ipynb  README.md  makefile
Exercises_11/: Exercise_11.ipynb  best_configurations.csv  exercise_11_results.csv
Exercises_12/: Exercise_12.ipynb  training.py
Exercises_12/data/: dnn_histories.pkl  dnn_scores.npy
Libraries/Parallel_Random_Number_Generator/: random.cpp  random.h
Libraries/lib/: BA.cpp  BA.h
(+2 files in other folders)
